force-app/main/default/objects/KT_Signer__c/KT_Signer__c.object-meta.xml
<CustomObject>
    <description>Individual signer in a B4 e-signature workflow. Tracks signer status, audit evidence, and delegation data.</description>
    <label>KT Signer</label>
    <nameField>
        <displayFormat>SIGNER-{000000}</displayFormat>
        <label>Signer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KT Signers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>