force-app/main/default/objects/KT_Signer__c/fields/Delegated_To__c.field-meta.xml
<CustomField>
    <fullName>Delegated_To__c</fullName>
    <description>Email of delegate if signer used delegation.</description>
    <label>Delegated To</label>
    <type>Email</type>
</CustomField>