force-app/main/default/objects/KT_Signer__c/fields/Delegation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delegation_Reason__c</fullName>
    <description>Reason provided by the original signer when delegating.</description>
    <label>Delegation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>