force-app/main/default/objects/KT_Signer__c/fields/Device_User_Agent__c.field-meta.xml
<CustomField>
    <fullName>Device_User_Agent__c</fullName>
    <description>Browser or device user agent captured at signing moment.</description>
    <label>Device User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>