force-app/main/default/objects/KT_Signer__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>Latitude and longitude if browser geolocation permission is granted at signing.</description>
    <label>Geolocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>