force-app/main/default/objects/KT_Signer__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IPv4 or IPv6 address captured at signing moment as legal audit evidence.</description>
    <label>IP Address</label>
    <length>45</length>
    <type>Text</type>
</CustomField>