force-app/main/default/objects/KT_Signer__c/fields/KT_Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>KT_Signature_Request__c</fullName>
    <description>Parent signing workflow.</description>
    <label>KT Signature Request</label>
    <referenceTo>KT_Signature_Request__c</referenceTo>
    <relationshipLabel>Signers</relationshipLabel>
    <relationshipName>Signers</relationshipName>
    <type>MasterDetail</type>
</CustomField>