force-app/main/default/objects/KT_Signer__c/fields/Reminder_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_At__c</fullName>
    <description>Timestamp of the last reminder, used to throttle reminder frequency.</description>
    <label>Reminder Sent At</label>
    <type>DateTime</type>
</CustomField>