force-app/main/default/objects/KT_Signer__c/fields/Session_Token__c.field-meta.xml
<CustomField>
    <fullName>Session_Token__c</fullName>
    <description>SHA-256 hash of the one-time signing session token. Cleared after successful signature capture.</description>
    <label>Session Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>