force-app/main/default/objects/KT_Signer__c/fields/Signature_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_Id__c</fullName>
    <description>ContentDocument Id of the captured canvas signature image.</description>
    <label>Signature Image Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>