force-app/main/default/objects/KT_Signer__c/fields/Signed_At__c.field-meta.xml
<CustomField>
    <fullName>Signed_At__c</fullName>
    <description>UTC timestamp when the signature was captured.</description>
    <label>Signed At</label>
    <type>DateTime</type>
</CustomField>