force-app/main/default/objects/KT_Signer__c/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <description>Email address where the signing invitation is sent.</description>
    <label>Signer Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>