force-app/main/default/objects/KT_Signer__c/fields/Signer_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Name__c</fullName>
    <description>Full name of the signer.</description>
    <label>Signer Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>