force-app/main/default/objects/KT_Signer__c/fields/Signer_Role__c.field-meta.xml
<CustomField>
    <fullName>Signer_Role__c</fullName>
    <description>Role of this signer in the workflow.</description>
    <label>Signer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Onboardee</fullName><default>true</default><label>Onboardee</label></value>
            <value><fullName>HR Admin</fullName><default>false</default><label>HR Admin</label></value>
            <value><fullName>Hiring Manager</fullName><default>false</default><label>Hiring Manager</label></value>
            <value><fullName>Legal Counsel</fullName><default>false</default><label>Legal Counsel</label></value>
            <value><fullName>Compliance Officer</fullName><default>false</default><label>Compliance Officer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>