force-app/main/default/objects/KT_Signer__c/fields/Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Signing_Order__c</fullName>
    <description>Numeric signing order. Lower numbers sign first in sequential mode.</description>
    <label>Signing Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>