force-app/main/default/objects/KT_Signer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Individual signer lifecycle status.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Invitation Sent</fullName><default>false</default><label>Invitation Sent</label></value>
            <value><fullName>Viewed</fullName><default>false</default><label>Viewed</label></value>
            <value><fullName>Signed</fullName><default>false</default><label>Signed</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>Delegated</fullName><default>false</default><label>Delegated</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>